--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,26 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Vercel
+.vercel
+
+# Environment variables
+.env
+.env.local
+.env.production
+.env.development
+
+# Build files
+build/
+.cache/
+
+# Mac
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
